fix(RegistrationStepTwoForm,styles.css): add nowrap text for tooltip

--- a/src/components/Layout/registrationForm/styles.css
+++ b/src/components/Layout/registrationForm/styles.css
@@ -4,22 +4,27 @@
   align-items: center;
   width: 60vw;
 }
+
 .registration__header {
   margin-bottom: 40px;
 }
+
 .registration__form__step {
   display: flex;
   flex-direction: column;
   gap: 40px;
   align-items: center;
 }
+
 .registration__form__step__2 {
   gap: 32px;
 }
+
 .registration__form__section__header {
   margin-bottom: 24px;
   text-align: center;
 }
+
 .registration__form__section__content {
   display: grid;
   align-items: center;
@@ -27,45 +32,64 @@
   column-gap: 32px;
   row-gap: 16px;
 }
+
 .registration__form__input,
 .select__container,
-.button__container__primary {
+.button__container__primary,
+.registration__form__tabs__container {
   width: 260px;
 }
+
 .registration__form__tabs {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 0;
   padding: 4px;
   background-color: var(--grayScale-color-lightest);
   border-radius: 4px;
+  button {
+    width: 100%;
+  }
 }
+
 .button__primary {
   background-color: var(--main-color-primaryMuted);
   color: var(--main-color-primary);
 }
+
 .button__container__login {
   width: 121px;
   margin-bottom: 40px;
 }
-.registration__code__input__container,.registration__prevButton__container {
+
+.registration__code__input__container,
+.registration__prevButton__container {
   width: 110px;
 }
+
+.registration__form__tooltip .s {
+  white-space: nowrap;
+}
+
 .registration__code__input {
   input {
-    -webkit-text-security:squire;
+    -webkit-text-security: squire;
     font-family: 'Rubik-Fake', sans-serif;
     line-height: 1.5;
   }
 }
-.registration__button__repeat{
+
+.registration__button__repeat {
   color: var(--main-color-primary);
   text-decoration: underline;
   cursor: pointer;
   user-select: none;
 }
-.registration__text__timer{
+
+.registration__text__timer {
   width: 300px;
 }
-.registration__prevButton__container{
+
+.registration__prevButton__container {
   margin-bottom: 40px;
 }
